--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="site-heading">
                         <h1>Wine Quality Prediction</h1>
-                        <span class="subheading">A Wine Quality Checking Web App</span>
+                        <span class="subheading">A Wine Quality Checking Application</span>
                     </div>
                 </div>
             </div>
@@ -223,3 +223,4 @@
 </body>
 
 </html>
+
